fix some form inputs overflowing inline

--- a/meal-ui/src/styles/local/partials/1-elements/forms/inputs.scss
+++ b/meal-ui/src/styles/local/partials/1-elements/forms/inputs.scss
@@ -10,6 +10,9 @@
 }
 
 .form-input {
+	display: inline-grid;
+	width: 100%;
+
 	::placeholder {
 		opacity: 1;
 	}
